# popMax

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: release.yml
installer/: PopMax.iss
res/: PopMax.rc
src/: app_theme.rs  bangs.rs  hotkey.rs  launcher.rs  list.rs  load_themes.rs  main.rs  scanner.rs  tray.rs  types.rs  utils.rs  windows_icons.rs
src/components/: fav.rs  list.rs  mod.rs
