[package]
name = "PopMax"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "2"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
walkdir = "2"
lnk = "0.6"
image = "0.25"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse"
] }
widestring = "1.0"
urlencoding = "2"
webbrowser = "1"
rayon = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
smol = "2.0.2"
